2005-04-20  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/boardicons/connect4.png: Frank reworked the connect4 activity graphism.
	* boards/connect4/back.png:
	* boards/connect4/grid.png:
	* boards/connect4/tux-teacher.png:
	* boards/music/COPYRIGHT:
	* boards/music/intro.ogg: Ludovic Grossard reworked the intro music.
	It's based on the previous melody but sounds better.
	* src/boards/python/connect4.py: Fixed to work with new graphism
	* src/boards/smallnumbers.c: (smallnumbers_create_item): In case of 2 dices, one could be hidden 
	on the right. It's fixed now.
	* src/gcompris/gcompris.c: Minor string change in the usage.

2005-04-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/erase_clic.xml.in: fixed english
	* boards/erase_double_clic.xml.in: -
	* po/POTFILES.in: fixed misspelled files
	* po_report.pl: added Rwanda
	* src/gcompris/anim.c: (gcompris_load_animation): 
	* src/gcompris/gameutil.c: (gcompris_load_pixmap),
	(gcompris_find_absolute_filename): added gcompris_find_absolute_filename by Yves
	It makes it easier to search file in GCompris usual directory or local
	gcomprisBoard->board_dir.
	* src/gcompris/gameutil.h:
	* src/gcompris/soundutil.c: (thread_play_ogg):

2005-04-18  Bruno coudoin  <bruno.coudoin@free.fr>


	Yves added a new board called bargame. The manual is:
	Put balls in the holes. You win if the computer play the last one.
	If you want Tux to begin, just click on him.
	Bruno Created the background image, Yves did the rest of the game.

	Serveral changes in the computer menu. Now there is a submenu for the
	mouse activity. I redid the erase activity icons to be more precse.
	The mouse comes from openclipart.

	I redid the tux teacher image as found in bargame and connect4

	Some minor fixes for win32 compilation

	log format is now generic and does not need to be localised.
	
	* Makefile.am:
	* boards/Makefile.am:
	* boards/bargame.xml.in:
	* boards/bargame/blue_ball.png:
	* boards/bargame/board.png:
	* boards/bargame/case.png: